Introduce task for creating a custom runtime image